[metadata]
name = alma-publication
version = attr: alma-publication.__version__
url = https://github.com/ishiishun/alma-publication
author =Shun Ishii
author_email = shun.ishii@nao.ac.jp
license_files = LICENSE
description = alma-publication: Personal Python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
