[metadata]
name = alma_publication
version = attr: alma_publication.__version__
url = https://github.com/ishiishun/alma-publication
author =Shun Ishii
author_email = shun.ishii@nao.ac.jp
license_files = LICENSE
description = alma_publication: Personal Python package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
